# MathStatPy

./: .gitignore  CMakeLists.txt  MathStatPy.c  MathStatPy.cpp  README.md  setup.py
Examples/: Gmurman_task.py
common/: combinatorics.c  combinatorics.cpp  combinatorics.h  probability_type.cpp  probability_type.h
src/: combinatorics.cpp  combinatorics.h  probability_theory.cpp  probability_theory.h  probability_type.cpp  probability_type.h
tests/: Gmurman_task.py  combinatorics_test.py  probability_obj_test.py  probability_theory_test.py
